Create article content and tidy up.